# PracticeCPP

./: .gitignore  CMakeLists.txt  CMakePresets.json  CmakeLists.txt  README.md
.github/workflows/: c-cpp.yml  main.yml
AdvancedCPP/01_OperatorOverload/: functor.cpp  incr-decr.cpp  rational.cpp  rational2.cpp
AdvancedCPP/02_MoveSemantics/: container-02.cpp  container-03.cpp  container.cpp  vector-test.cpp
AdvancedCPP/03_LambdaExpressions/: jump.cpp  lambda-capture.cpp  lambda-hello.cpp  lambda-predicate.cpp
AdvancedCPP/04_ConstraintsAndConcepts/: constraints.cpp
AdvancedCPP/05_OptionalsAndVariants/: any.cpp  optional.cpp  variant.cpp
AdvancedCPP/06_Concurrency/: async.cpp  atomic.cpp  mutex.cpp  producer-consumer.cpp  promise.cpp  sleep.cpp  thread.cpp
AdvancedCPP/07_OtherSubjects/: chrono.cpp  filesystem.cpp  initialization.cpp  rng.cpp  struct-binding.cpp
AdvancedCPP/08_OtherCPPFeatures/: format.cpp  spaceship-frac.cpp  spaceship.cpp  span.cpp
AdvancedCPP/09_Project_numword/: numword-test.cpp  numword.cpp  numword.h
CMakeTestFolder/: MyCppCode.cpp
CMakeTestFolder2/: 2test.cpp
DesignPattern/01_Adapter/: classAdapter.cpp  cloudStorage.cpp  objectAdapter.cpp  readme.md
DesignPattern/02_Bridge/: bridgeRefactor.cpp  vehiclesEngines.cpp
DesignPattern/03_Composite/: boxesProducts.cpp  drawingShapes.cpp
DesignPattern/04_Decorator/: computershop.cpp  pizza.cpp
DesignPattern/05_Facade/: weatherAPI.cpp
DesignPattern/06_Flyweight/: sprites.cpp  textEditor.cpp
DesignPattern/07_Proxy/: confidential.cpp  readConfig.cpp
TheBasics/01_HelloWorld/: HelloWorld.cpp
TheBasics/02_Loops/: for.cpp  range-for.cpp
TheBasics/05_Pointer/: pointer-incr.cpp
TheBasics/06_Class/: accessors.cpp  class.cpp  rational.cpp
TheBasics/07_Template/: template-class.cpp  template-function.cpp
TheBasics/08_STL/: iostream-file.cpp  iostream-formatting.cpp  string.cpp  vector.cpp
TheBasics/Constructor/: constructor.cpp
TheBasics/HelloWorld/: HelloWorld.cpp
TheBasics/Loops/: switch.cpp  while.cpp
TheBasics/StatementAndExpressions/: SE.cpp
